# alivestreets

./: pyproject.toml
alivestreets/features/: facade_features.py  floor_segmentation.py  gvi_feature.py  street_stall_segmentator.py  svf_feature.py
alivestreets/streetview_collection/: streetview_collection.py  streetview_network_collection.py
alivestreets/visualization/: trajectory_visualizer.py
tests/: informal_retail_stalls_tagging.ipynb
